@@ -24,7 +24,7 @@ module ActiveMerchant #:nodoc:
         'REBID' => :rebid,
         'TRANS_TYPE' => :trans_type,
         'PAYMENT_ACCOUNT_MASK' => :acct_mask,
-        'CARD_TYPE' => :card_type,
+        'CARD_TYPE' => :card_type
       }
 
       REBILL_FIELD_MAP = {
@@ -41,6 +41,7 @@ module ActiveMerchant #:nodoc:
         'REB_AMOUNT' => :rebill_amount,
         'NEXT_AMOUNT' => :next_amount,
         'USUAL_DATE' => :undoc_usual_date, # Not found in the bp20rebadmin API doc.
+        'CUST_TOKEN' => :cust_token
       }
 
       self.supported_countries = ['US', 'CA']
@@ -84,7 +85,7 @@ module ActiveMerchant #:nodoc:
         add_rebill(post, options) if options[:rebill]
         add_duplicate_override(post, options)
         post[:TRANS_TYPE]  = 'AUTH'
-        commit('AUTH_ONLY', money, post)
+        commit('AUTH_ONLY', money, post, options)
       end
 
       # Perform a purchase, which is essentially an authorization and capture in a single operation.
@@ -107,7 +108,7 @@ module ActiveMerchant #:nodoc:
         add_rebill(post, options) if options[:rebill]
         add_duplicate_override(post, options)
         post[:TRANS_TYPE]  = 'SALE'
-        commit('AUTH_CAPTURE', money, post)
+        commit('AUTH_CAPTURE', money, post, options)
       end
 
       # Captures the funds from an authorize transaction.
@@ -123,7 +124,7 @@ module ActiveMerchant #:nodoc:
         add_customer_data(post, options)
         post[:MASTER_ID] = identification
         post[:TRANS_TYPE] = 'CAPTURE'
-        commit('PRIOR_AUTH_CAPTURE', money, post)
+        commit('PRIOR_AUTH_CAPTURE', money, post, options)
       end
 
       # Void a previous transaction
@@ -136,7 +137,7 @@ module ActiveMerchant #:nodoc:
         post = {}
         post[:MASTER_ID] = identification
         post[:TRANS_TYPE] = 'VOID'
-        commit('VOID', nil, post)
+        commit('VOID', nil, post, options)
       end
 
       # Performs a credit.
@@ -169,7 +170,7 @@ module ActiveMerchant #:nodoc:
         add_invoice(post, options)
         add_address(post, options)
         add_customer_data(post, options)
-        commit('CREDIT', money, post)
+        commit('CREDIT', money, post, options)
       end
 
       def credit(money, payment_object, options = {})
@@ -189,7 +190,7 @@ module ActiveMerchant #:nodoc:
         add_invoice(post, options)
         add_address(post, options)
         add_customer_data(post, options)
-        commit('CREDIT', money, post)
+        commit('CREDIT', money, post, options)
       end
 
       # Create a new recurring payment.
@@ -313,10 +314,11 @@ module ActiveMerchant #:nodoc:
 
       private
 
-      def commit(action, money, fields)
+      def commit(action, money, fields, options = {})
         fields[:AMOUNT] = amount(money) unless(fields[:TRANS_TYPE] == 'VOID' || action == 'rebill')
         fields[:MODE] = (test? ? 'TEST' : 'LIVE')
         fields[:ACCOUNT_ID] = @options[:login]
+        fields[:CUSTOMER_IP] = options[:ip] if options[:ip]
 
         if action == 'rebill'
           url = rebilling_url
