@@ -38,6 +38,7 @@
 * Pin Payments: Concatenate card and customer tokens when storing card [therufs] #3144
 * Update Discover regex to allow card numbers longer than 16 digits [prashcr] #3146
 * Merrco partial refunds fix [payfirma1] #3141
+* BluePay: Send customer IP address when provided [jknipp] #3149
 
 == Version 1.90.0 (January 8, 2019)
 * Mercado Pago: Support "gateway" processing mode [curiousepic] #3087
